--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-
+html { background-color: black; } 
+body { margin: 50px; background-color: white; height: 500px; overflow:auto}
 
 
 .messages {
@@ -14,4 +15,12 @@
 	height:70%;
 	background-color: white;
 	overflow:hidden;
+}
+
+.box{
+	height:70px;
+	
+	margin:1px;
+	background-color: red;
+
 }
